# pg-dump-splitter

./: .gitignore  EXAMPLE.excluding-obj-hook.lua  EXAMPLE.excluding-obj-hooks.lua  EXAMPLE.excluding-obj-hooks1.lua  EXAMPLE.excluding-obj-hooks2.lua  LICENSE.rst  README.rst  meson.build  meson_options.txt
embedder/: embedder-luac.sh  embedder.py  meson.build
include/: meson.build  pg-dump-splitter.h
src/: bootstrap.c  emb-libs.c  emb-libs.h  git-rev.c.in  git-rev.h  lex.c  lex.h  main.c  meson.build  os-ext.c  os-ext.h  pg-dump-splitter.lua  pg_dump_splitter.lua  sort_chunks.lua  split_to_chunks.lua  split_to_chunks_pattern_rules.lua
src/winapi/: main-winapi.c  os-ext-winapi.c  os-helpers-winapi.c  os-helpers-winapi.h
